Fix position of bounding boxes when scrolling
When changing configuration of a preview with scrolling involved, the
bounding boxes are not automatically aware of the scrolling. So we need
to manually update the scene manager to correctly place the components.

Fixes: 414319717
Test: manual check
Change-Id: I3ec03418bad973c7f956ca20e58ebdcfed7d727b

GitOrigin-RevId: bf7cacc440b23316d8ad0322855f1bdb969f7d64
(cherry picked from commit 46180289004a5680f850a6a41a334f1be2f296e2)